force-app/main/default/objects/CF_Evaluation_Criteria__c/CF_Evaluation_Criteria__c.object-meta.xml
<CustomObject>
    <label>Evaluation Criteria</label>
    <nameField>
        <displayFormat>ECN-{000000}</displayFormat>
        <label>Evaluation Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>