force-app/main/default/objects/CF_Evaluation_Criteria__c/fields/CF_Category__c.field-meta.xml
<CustomField>
    <fullName>CF_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Opening</fullName>
            </value>
            <value>
                <fullName>Understanding and Confirming Patient Needs</fullName>
            </value>
            <value>
                <fullName>Brief Caller on Active Practice Messages/Promotions When Appropriate</fullName>
            </value>
            <value>
                <fullName>Responding to Patient Needs and Preferences - Resolution</fullName>
            </value>
            <value>
                <fullName>Collecting Appropriate Data for Appointment Scheduling</fullName>
            </value>
            <value>
                <fullName>Accurately Completed Transaction and Confirming Details</fullName>
            </value>
            <value>
                <fullName>Closing Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>