force-app/main/default/objects/CF_Evaluation_Criteria__c/fields/CF_Criteria__c.field-meta.xml
<CustomField>
    <fullName>CF_Criteria__c</fullName>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>