force-app/main/default/objects/CF_Evaluation_Criteria__c/fields/CF_Evaluation_Template__c.field-meta.xml
<CustomField>
    <fullName>CF_Evaluation_Template__c</fullName>
    <label>Evaluation Template</label>
    <referenceTo>CF_Evaluation_Template__c</referenceTo>
    <relationshipLabel>Evaluation Criteria</relationshipLabel>
    <relationshipName>Evaluation_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>