force-app/main/default/objects/CF_Evaluation_Criteria__c/fields/CF_Score__c.field-meta.xml
<CustomField>
    <fullName>CF_Score__c</fullName>
    <label>Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>