force-app/main/default/objects/CF_Evaluation_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CF_Evaluation_Template__c</columns>
    <columns>CF_Category__c</columns>
    <columns>CF_Criteria__c</columns>
    <columns>CF_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>